argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  selector:
    app: springboot
  type: NodePort
  ports:
  - name: springboot
    protocol: TCP
    port: 8080
    targetPort: 8080
